Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -144,8 +144,7 @@ h1, h2, h3, h4, h5, h6 {
   	font-size: x-small;
 	}
 .update {
-	border-bottom: 4px solid #493c33;	
-	float: right;}
+	position: absolute; float: right;}
 footer {
 	width: auto;
 	float: inherit;
